DB-9747: backup/replication protobuf message cleanup